--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:text="Search"
         tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="113dp" />
+        tools:layout_editor_absoluteY="136dp" />
 
     <EditText
         android:id="@+id/Input"
@@ -24,14 +24,20 @@
         android:inputType="text"
         android:text="Enter a word"
         tools:layout_editor_absoluteX="83dp"
-        tools:layout_editor_absoluteY="31dp" />
+        tools:layout_editor_absoluteY="56dp" />
 
     <TextView
         android:id="@+id/welcomeword"
         android:layout_width="wrap_content"
         android:layout_height="14dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginStart="32dp"
         android:text="Welcome to our dictionary"
-        tools:layout_editor_absoluteX="110dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="2dp" />
 
     <TextView
